--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="menu_video">Videos</string>
     <string name="menu_news">News</string>
+    <string name="menu_arch">Archive</string>
 </resources>
